feat: add initial HTML and CSS layout

--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="header">
+        header
+    </div>
+    <div class="hero">
+        hero
+    </div>
+    <div class="information">
+        information
+    </div>
+    <div class="quote">
+        quote
+    </div>
+    <div class="cta-section">
+        cta-section
+    </div>
+    <div class="footer">
+        footer
+    </div>
 </body>
 </html>
