feat: complete hero and information section

--- a/index.html
+++ b/index.html
@@ -23,10 +23,35 @@
         </div>
     </div>
     <div class="hero">
-        hero
+        <div class="content">
+            <div class="main-text">Hi, My name's Aaron ✋</div>
+            <div class="secondary-text">This website was made for a project following The Odin Project course. By the time you see this, I'll probably have better websites. So get off this one.</div>
+            <button>Click</button>
+        </div>
+        <img src="images/Luca.png">
     </div>
     <div class="information">
-        information
+        <div class="information-header">
+            About Me
+        </div>
+        <div class="information-boxes">
+            <div class="box">
+                <img src="images/information-icons/cross.png">
+                <p>I found God and became a Christian at the start of 2025. I read my bible every day and I go to church on Sunday. </p>
+            </div>
+            <div class="box">
+                <img src="images/information-icons/dumbbell.png">
+                <p>I started working out when I was 12 although I wasn't consistent at first! The split I run is Pull Push Legs.</p>
+            </div>
+            <div class="box">
+                <img src="images/information-icons/productivity.png">
+                <p>I am interested in improving myself and being more productive. There is always room for improvement and I aim to better myself.</p>
+            </div>
+            <div class="box">
+                <img src="images/information-icons/website.png">
+                <p>As you can tell from this project/website, I am interested in coding. It's smth to do in stead of scrolling and I hear it pays well :).</p>
+            </div>
+        </div>
     </div>
     <div class="quote">
         quote
