feat: complete quote and call to action section

--- a/index.html
+++ b/index.html
@@ -53,11 +53,30 @@
             </div>
         </div>
     </div>
-    <div class="quote">
-        quote
+    <div class="quote-section">
+        <div class="quote">
+            <div>
+                No discipline seems pleasant at the time… but it produces a harvest of righteousness and peace…”
+            </div>
+            <div class="citation">
+                - Hebrews 12:11
+            </div>
+        </div>
     </div>
     <div class="cta-section">
-        cta-section
+        <div class="content">
+            <div class="text">
+                <div class="header-text">
+                    Click this Link
+                </div>
+                <div>
+                    Click this link bro. I know you're curious.
+                </div>
+            </div>
+            <button>
+                Click
+            </button>
+        </div>
     </div>
     <div class="footer">
         footer
