feat: complete footer and attributions

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
     </div>
     <div class="footer">
-        footer
+        <a href="attributions.html">Attributions</a>
     </div>
 </body>
 </html>
